<resources>
    <string name="app_name">Montra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="onboard_1_title">Gain total control of your money</string>
    <string name="onboard_1_desc">Become your own money manager and make every rupee count</string>

    <string name="onboard_2_title">Know where your money goes</string>
    <string name="onboard_2_desc">Track your transaction easily,with categories and financial report</string>
    <string name="onboard_3_title">Planning ahead</string>
    <string name="onboard_3_desc">Setup your budget for each category so you in control</string>
    <string name="let_s_start">Let\'s Start</string>


    <string name="account_balance">Account Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="rs_symbol">₹</string>

    <string name="spend_frequency">Spend Frequency</string>
    <string name="shopping">Shopping</string>
    <string name="select_a_month">Select a Month :</string>

    <string name="transaction">Transaction</string>
    <string name="transactions">Transactions</string>
    <string name="see_all">See All</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="home">Home</string>
    <string name="budget">Budget</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all">All</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="october">October</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="may">May</string>
    <string name="april">April</string>
    <string name="march">March</string>
    <string name="february">February</string>
    <string name="january">January</string>
    <string name="how_much">How much?</string>
    <string name="_0">0</string>
    <string name="category">Category</string>
    <string name="when">When</string>
    <string name="description">Description</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="continue_">Continue</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="entertainment">Entertainment</string>
    <string name="personal_spending">Personal Spending</string>
  <!--  <string name="saving_amp_debtsinsurance"><![CDATA[Saving & Debt Insurance]]></string>-->
    <string name="saving_amp_debtsinsurance">Saving &amp; Debt Insurance</string>
    <string name="healthcare">Healthcare</string>
    <string name="insurance">Insurance</string>
    <string name="utilities">Utilities</string>
    <string name="transportation">Transportation</string>
    <string name="food">Food</string>
    <string name="housing">Housing</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="permissions_required_for_this_feature_msg">It Looks like you have turned off permissions required for this feature. It can be enabled under Application Settings</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings_caps">GO TO SETTINGS</string>

    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>

    <!--  Share -->
    <string name="success_transaction_export">Transaction exported successfully!</string>
    <string name="failed_transaction_export">Transaction exported failed ☹️</string>
    <string name="text_error">Transaction exported failed ☹️</string>
    <string name="support_pending">Support for export on Android10+ is still in progress, kindly be patient and thanks for support!</string>
    <string name="text_open">Open</string>



</resources>